# sp_lh3_monitoring_script

./: .gitignore  activity.py  ask.py  history.txt  pyproject.toml
tests/: test_sp_ask_presence.py
