[tool.poetry]
name = "sp_ask_presence"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pytz = "^2019.3"
lh3api = "^0.2.0"
xlrd = "^1.2.0"
openpyxl = "^3.0.3"
pandas = "^0.25.3"
tinydb = "^3.15.2"
ask_schools = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ptpython = "^2.0.6"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
